# event-timers

./: .gitignore  Cargo.toml  LICENSE  README.md  build_and_copy.bat  event_tracks.json
src/: config.rs  json_loader.rs  lib.rs  notification_logic.rs  notifications.rs  time_utils.rs
src/ui/: main_window.rs  mod.rs  notifications.rs  settings.rs  time_ruler.rs
